// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video with callbacks 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with children 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
  <div
    className="absolute bottom0 box left0 overflowHidden right0 top0"
  >
    <div>
      overlay
    </div>
  </div>
  <div
    className="controls"
  >
    <div
      className="box paddingX2 paddingY2"
    >
      <div
        aria-disabled={false}
        className="tapTransition rounding0 accessibilityOutline pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          aria-hidden={null}
          aria-label="Play"
          className="light icon iconBlock"
          height={20}
          role="img"
          viewBox="0 0 24 24"
          width={20}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
    >
      <div
        aria-disabled={false}
        className="tapTransition rounding0 accessibilityOutline pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          aria-hidden={null}
          aria-label="Hide captions"
          className="light icon iconBlock"
          height={20}
          role="img"
          viewBox="0 0 24 24"
          width={20}
        >
          <path
            d="test-file-stub"
          />
        </svg>
        <div
          className="absolute box light marginTop1 rounding4"
          style={
            Object {
              "height": 2,
              "width": 20,
            }
          }
        />
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <div
        className="light alignEnd Text fontSize100 fontWeightNormal"
      >
        00:00
      </div>
    </div>
    <div
      className="box flexGrow paddingX2 paddingY2"
    >
      <div
        className="box relative"
        style={
          Object {
            "height": 16,
          }
        }
      >
        <div
          aria-label="Video progress"
          aria-valuemax={0}
          aria-valuemin="0"
          aria-valuenow={0}
          className="playhead"
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="progressbar"
          tabIndex="-1"
        >
          <div
            className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
            style={
              Object {
                "height": 4,
              }
            }
          >
            <div
              className="box light rounding2"
              style={
                Object {
                  "height": "100%",
                  "width": "NaN%",
                }
              }
            />
            <div
              className="box circle light marginStartN2"
              style={
                Object {
                  "height": 16,
                  "marginTop": -6,
                  "width": 16,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <div
        className="light alignEnd Text fontSize100 fontWeightNormal"
      >
        00:00
      </div>
    </div>
    <div
      className="box paddingX2 paddingY2"
    >
      <div
        aria-disabled={false}
        className="tapTransition rounding0 accessibilityOutline pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          aria-hidden={null}
          aria-label="Unmute"
          className="rtlSupport light icon iconBlock"
          height={20}
          role="img"
          viewBox="0 0 24 24"
          width={20}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video with crossOrigin 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with dataTestId 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    data-test-id="gestalt-video"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
    />
  </video>
</div>
`;

exports[`Video with media attributes 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    loop={true}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="metadata"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with multiple sources 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
  >
    <source
      src="https://archive.org/download/ElephantsDream/ed_1024_512kb.mp4"
      type="video/mp4"
    />
    <source
      src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
      type="video/ogg"
    />
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with objectFit 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
    style={
      Object {
        "objectFit": "contain",
      }
    }
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with source 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;

exports[`Video with startTime 1`] = `
<div
  className="player blackBg"
  style={
    Object {
      "height": 0,
      "paddingBottom": "100%",
    }
  }
>
  <video
    className="video"
    crossOrigin="anonymous"
    disableRemotePlayback={false}
    muted={true}
    onCanPlay={[Function]}
    onDurationChange={[Function]}
    onEnded={[Function]}
    onError={[Function]}
    onLoadStart={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaying={[Function]}
    onProgress={[Function]}
    onSeeked={[Function]}
    onSeeking={[Function]}
    onStalled={[Function]}
    onTimeUpdate={[Function]}
    onWaiting={[Function]}
    preload="auto"
    src="https://media.w3.org/2010/05/sintel/trailer_hd.mp4"
  >
    <track
      kind="captions"
      src="https://media.w3.org/2010/05/sintel/captions.vtt"
    />
  </video>
</div>
`;
